--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<img src="img/search-top.png">
 		<div class="content">
 			<div>
-				<img src="img/logo.png">
+				<img src="img/soask.png">
 				<input class="search" type="text">
 				<input class="submit" type="submit" value="Search搜尋" onclick="search()">
 			</div>
