--- a/detail03.html
+++ b/detail03.html
@@ -6,7 +6,7 @@
 
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" href="img/favicon.ico">
-	<title>Soask</title>
+	<title>SOASK</title>
 </head>
 <body>
 	<!-- <div class="browser">
