--- a/uniPage02.html
+++ b/uniPage02.html
@@ -21,6 +21,7 @@
 	</section>
 	<section class="popUp show">
 		<div class="popUpContent">
+			<div style="margin-bottom: 20px;"><small><a href="uniPage.html">< 上一頁</a></small></div>
 			<div class="uniSearch" style="margin-bottom: 20px;">
 				<input id="popUpInput" type="text" value="'黃晟君'">
 				<button><img src="img/search.png"></button>
