Update result-top img

--- a/design.html
+++ b/design.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<section>
-		<img src="img/result-top.png">
+		<img src="img/result-top-design.png">
 
 		<div class="result flex">
 			<div class="left">
