--- a/University.html
+++ b/University.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<section>
-		<img src="img/result-top.png">
+		<img src="img/result-top-University.png">
 
 		<div class="result flex">
 			<div class="left">
