update 崙山科技大學 key

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				window.location.href = 'result.html';
 			} else if (searchInput.value.includes('片網')) {
 				window.location.href = 'site.html';
-			} else if (searchInput.value === '崙⼭科技大學') {
+			} else if (searchInput.value === '崙山科技大學') {
 				window.location.href = 'University.html';
 			} else if (searchInput.value === '2018新台北設計展') {
 				window.location.href = 'design.html';
