--- a/uniPage02.html
+++ b/uniPage02.html
@@ -34,8 +34,8 @@
 				<p>今年本校視覺傳達設計學系畢業製作展覽於6/15到6/17於新台北設計展登場。<br>其中，展品《穗意》更勇奪金光新人設計獎優選，貴為本校之光。黃晟君同學為首的《穗意》組別，以南部農民辛勞為稻穗鞠躬的畫面為靈感，利用回收品詮釋年輕一代對於土地的感恩。</p>
 				<p>指導老師許驛成教授自2017年即十分關心學生創作，為本校展覽作品盡心盡力，面對此次的成功他表示：「學生作品仍有他們的限制和粗糙度，卻也同時展現了最純粹的初心」組長黃晟君同學也說，雖然外界對於自己的作品有所質疑，但他絕對不會愧對組員與台灣這片土地所給他的感動。</p>
 				<div class="flex">
-					<div class="half"><img src="img/img.jpg"></div>
-					<div class="half"><img src="img/img.jpg"></div>
+					<div class="half"><img src="img/img01.jpg"></div>
+					<div class="half"><img src="img/img02.jpg"></div>
 				</div>
 			</div>
 		</div>
